--- a/pantalla_config.ui
+++ b/pantalla_config.ui
@@ -6,20 +6,23 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>382</width>
+    <width>427</width>
     <height>444</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="modal">
+   <bool>true</bool>
+  </property>
   <widget class="QGroupBox" name="groupbox_ffmpeg_path">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>361</width>
-     <height>80</height>
+     <width>411</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="title">
@@ -38,9 +41,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
-      <width>151</width>
-      <height>16</height>
+      <y>20</y>
+      <width>301</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -50,8 +53,8 @@
    <widget class="QPushButton" name="cambiar_path_button">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>30</y>
+      <x>320</x>
+      <y>20</y>
       <width>75</width>
       <height>24</height>
      </rect>
@@ -64,7 +67,7 @@
   <widget class="QPushButton" name="acept_config_button">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>90</x>
      <y>400</y>
      <width>75</width>
      <height>24</height>
@@ -77,7 +80,7 @@
   <widget class="QPushButton" name="cancel_config_button">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>260</x>
      <y>400</y>
      <width>75</width>
      <height>24</height>
@@ -92,7 +95,7 @@
     <rect>
      <x>10</x>
      <y>380</y>
-     <width>361</width>
+     <width>401</width>
      <height>16</height>
     </rect>
    </property>
@@ -104,9 +107,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>100</y>
-     <width>361</width>
-     <height>101</height>
+     <y>70</y>
+     <width>411</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="title">
